@@ -25,6 +25,7 @@ source "$APPSDIR/system/sudoku/Kconfig"
 source "$APPSDIR/system/lm75/Kconfig"
 source "$APPSDIR/system/vi/Kconfig"
 source "$APPSDIR/system/stackmonitor/Kconfig"
+source "$APPSDIR/system/symtab/Kconfig"
 source "$APPSDIR/system/cdcacm/Kconfig"
 source "$APPSDIR/system/composite/Kconfig"
 source "$APPSDIR/system/usbmsc/Kconfig"
