@@ -1405,4 +1405,11 @@
 	* system/netdb:  Failed to build if CONFIG_NET_HOSTFILE was not defined
 	  because gethostbyaddr() was not available.  Noted by OrbitalFox
 	  (2015-08-21).
+	* apps/system/symtab: Optional canned symtab inclusion to the build. When
+	  option CONFIG_SYSTEM_SYMTAB is selected and symbol table file
+	  libc/symtab/canned_symtab.inc is prepared then application can
+	  use system provided complete symbol table. The option has
+	  substantial effect on system image size. Mainly code/text. If
+	  loading of applications at runtime is not planned do not select
+	  this.  From Pavel Pisa (2015-08-23).
 
